2007-04-07  Ulrich Drepper  <drepper@redhat.com>

	* posix/sys/wait.h: Remove unnecessary forward declaration.

2007-04-05  Jakub Jelinek  <jakub@redhat.com>

	* nis/nis_call.c (__nisfind_server): Replace (*dir)->do_servers
	with obj->do_servers after first_shoot.

2007-04-03  Ulrich Drepper  <drepper@redhat.com>

	* posix/Makefile (routines): Add sched_cpucount.
	(tests): Add tst-cpucount.
	* posix/sched_cpucount.c: New file.
	* posix/tst-cpucount.c: New file.
	* posix/Versions: Export __sched_cpucount with version GLIBC_2.6.
	* bits/sched.h: Define __CPU_COUNT.  Declare __sched_cpucount.
	* sysdeps/unix/sysv/linux/bits/sched.h: Likewise.
	* posix/sched.h: Define CPU_COUNT.

2007-03-27  Jakub Jelinek  <jakub@redhat.com>

	* posix/fnmatch.c (STRUCT): Define.
	(fnmatch): Pass NULL as last argument to internal_fn{,w}match.
	* posix/fnmatch_loop.c (struct STRUCT): New type.
	(FCT): Add ends argument.  If ends != NULL and normal * is
	seen in the pattern, store current pattern and string pointers
	and return.  Adjust recursive calls.
	(EXT): Adjust FCT callers.
	(STRUCT): Undef at the end of the file.
	* posix/Makefile (tests): Add tst-fnmatch2.
	* posix/tst-fnmatch2.c: New test.

2007-04-01  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/ia64/fpu/fesetround.c (fesetround): Return 0 on success
	and 1 on failure.

	* sysdeps/unix/sysv/linux/sync_file_range.c (sync_file_range):
	Change last argument to unsigned int.

2007-03-23  Jakub Jelinek  <jakub@redhat.com>

	* scripts/check-local-headers.sh: Filter out sys/capability.h.

2007-03-22  Jakub Jelinek  <jakub@redhat.com>

	* config.h.in (HAVE_LIBCAP): Add.
	* nscd/selinux.h: Include sys/capability.h rather than non-existent
	sys/capabilities.h.
	* nscd/selinux.c (preserve_capabilities): Use cap_free instead of
	free_caps.  Cast away const from 4th cap_set_flag argument.

2007-03-26  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/Versions: Move sync_file_range to
	GLIBC_2.6.