@@ -1,3 +1,9 @@
+2007-04-13  Jakub Jelinek  <jakub@redhat.com>
+
+	[BZ #4344]
+	* elf/ldconfig.c (search_dir): Fix 2 off-by-2 errors.
+	Reported by David Anderson <davea42@earthlink.net>.
+
 2007-04-07  Ulrich Drepper  <drepper@redhat.com>
 
 	* posix/sys/wait.h: Remove unnecessary forward declaration.
